--- a/src/util/Locales/lngFile/en.json
+++ b/src/util/Locales/lngFile/en.json
@@ -1,5 +1,6 @@
 {
   "": "",
+  "ko": "ko",
   "마이페이지": "MyPage",
   "로그아웃": "Logout",
   "로그아웃이 완료되었습니다.": "Logout complete.",
@@ -16,7 +17,7 @@
   "인증코드 보내기": "Send authentication code",
   "인증": "Authentication",
   "인증코드": "Authentication Code",
-  "남은 시간:": "Remain:",
+  "남은 시간": "Remain:",
   "인증되었습니다.": "Authenticated",
   "인증이 되었습니다.": "Authenticated",
   "인증 코드의 유효시간이 지났습니다.": "Authentication code has expired.",
@@ -45,6 +46,10 @@
   "이벤트 참가에 실패했어요 😢": "Failed to participate in the event 😢",
   "오류 발생 😢": "Error occurrence 😢",
   "이메일이나 비밀번호를 다시 확인해주세요": "Please check your email or password again",
+  "로그인이 필요합니다 😢": "You need to log in 😢",
+  "전송": "Send",
+  "님이 들어왔습니다.": " is in.",
+  "님이 나갔습니다.": " out.",
 
   "제목 및 글 내용을 검색해 보세요.": "Search by title and content.",
   "🙋‍♀️아무나": "🙋‍♀️Anyone",
@@ -89,7 +94,12 @@
   "eventName": "eventName",
 
   "시 / 도": "City / Province",
+  "市 / 道": "City / Province",
+  "City / Province": "City / Province",
   "구 / 군": "Distict / Country",
+  "区 / 洞": "Distict / Country",
+  "District / County District / County": "District / County District / County",
+  "Distict / Country": "Distict / Country",
   "ex. 서울시 마포구": "ex. Mapo-gu, Seoul",
   "서울특별시": "Seoul",
   "ソウル特別市": "Seoul",
@@ -776,16 +786,16 @@
   "西歸浦市": "Seogwipo-si",
   "Seogwipo-si": "Seogwipo-si",
 
-  "내 프로필": "My Profile",
+  "내 프로필": "My Profile Edit",
   "위치 정보": "Location Info",
   "수정": "Edit",
-  "참가목록": "List of participants",
+  "참가목록": "Participant List",
   "생성목록": "Creation List",
   "참여하신 이벤트가 없습니다.": "There are no events you participated in",
   "생성하신 이벤트가 없습니다.": "No events have been created",
   "삭제": "Delete",
   "참가취소": "Cancel Participation",
-  "회원탈퇴": "Membership Withdrawal",
+  "회원탈퇴": "Member Withdrawal",
   "탈퇴하기": "Withdraw",
   "탈퇴하는 사유를 입력해주세요 🙂": "Please enter the reason for withdrawal 🙂",
   "소중한 피드백은 더 좋은 서비스를 제공하기 위해 적극적으로 반영하도록 하겠습니다!": "Your valuable feedback will be actively reflected to provide better service!",
