--- a/src/util/Locales/lngFile/jp.json
+++ b/src/util/Locales/lngFile/jp.json
@@ -1,5 +1,6 @@
 {
   "": "",
+  "ko": "ko",
   "마이페이지": "マイページ",
   "로그아웃": "ログアウト",
   "로그아웃이 완료되었습니다.": "ログアウトが完了しました.",
@@ -16,7 +17,7 @@
   "인증코드 보내기": "認証コードを送信",
   "인증": "認証",
   "인증코드": "認証コード",
-  "남은 시간:": "残り時間:",
+  "남은 시간": "残り時間:",
   "인증되었습니다.": "認証されました.",
   "인증이 되었습니다.": "認証されました.",
   "인증 코드의 유효시간이 지났습니다.": "認証コードの有効時間が過ぎました.",
@@ -45,6 +46,10 @@
   "이벤트 참가에 실패했어요 😢": "イベント参加に失敗しました 😢",
   "오류 발생 😢": "エラー発生😢",
   "이메일이나 비밀번호를 다시 확인해주세요": "Eメールやパスワードをもう一度確認してください",
+  "로그인이 필요합니다 😢": "ログインが必要です 😢",
+  "전송": "転送",
+  "님이 들어왔습니다.": "入ってきました.",
+  "님이 나갔습니다.": "出かけました.",
 
   "제목 및 글 내용을 검색해 보세요.": "タイトルおよび本文を検索してください.",
   "🙋‍♀️아무나": "🙋‍♀️誰でも",
@@ -89,7 +94,11 @@
   "eventName": "eventName",
 
   "시 / 도": "市 / 道",
+  "City / Province": "市 / 道",
+  "市 / 道": "市 / 道",
   "구 / 군": "区 / 洞",
+  "Distict / Country": "区 / 洞",
+  "区 / 洞": "区 / 洞",
   "ex. 서울시 마포구": "ex. ソウル市麻浦区",
   "서울특별시": "ソウル特別市",
   "Seoul": "ソウル特別市",
@@ -777,13 +786,13 @@
   "내 프로필": "私のプロフィール",
   "위치 정보": "位置情報",
   "수정": "修正",
-  "참가목록": "参加リスト",
-  "생성목록": "作成リスト",
+  "참가목록": "イベント調印リスト",
+  "생성목록": "イベント生成リスト",
   "참여하신 이벤트가 없습니다.": "参加したイベントはありません",
   "생성하신 이벤트가 없습니다.": "作成したイベントはありません",
   "삭제": "削除",
   "참가취소": "参加取消",
-  "회원탈퇴": "会員退会",
+  "회원탈퇴": "メンバー脱退です",
   "탈퇴하기": "退会する",
   "탈퇴하는 사유를 입력해주세요 🙂": "退会する理由を入力してください 🙂",
   "소중한 피드백은 더 좋은 서비스를 제공하기 위해 적극적으로 반영하도록 하겠습니다!": "貴重なフィードバックはより良いサービスを提供するために積極的に反映するようにいたします!",
