--- a/src/util/Locales/lngFile/ko.json
+++ b/src/util/Locales/lngFile/ko.json
@@ -1,5 +1,6 @@
 {
   "": "",
+  "ko": "ko",
   "마이페이지": "마이페이지",
   "로그아웃": "로그아웃",
   "로그아웃이 완료되었습니다.": "로그아웃이 완료되었습니다.",
@@ -16,7 +17,7 @@
   "인증코드 보내기": "인증코드 보내기",
   "인증": "인증",
   "인증코드": "인증코드",
-  "남은 시간:": "남은 시간:",
+  "남은 시간": "남은 시간:",
   "인증되었습니다.": "인증되었습니다.",
   "인증이 되었습니다.": "인증이 되었습니다.",
   "인증 코드의 유효시간이 지났습니다.": "인증 코드의 유효시간이 지났습니다.",
@@ -41,6 +42,10 @@
   "이벤트 참가에 실패했어요 😢": "이벤트 참가에 실패했어요 😢",
   "오류 발생 😢": "오류 발생 😢",
   "이메일이나 비밀번호를 다시 확인해주세요": "이메일이나 비밀번호를 다시 확인해주세요",
+  "로그인이 필요합니다 😢": "로그인이 필요합니다 😢",
+  "전송": "전송",
+  "님이 들어왔습니다.": "님이 들어왔습니다.",
+  "님이 나갔습니다.": "님이 나갔습니다.",
 
   "닉네임": "닉네임",
   "한줄 자기소개": "한줄 자기소개",
@@ -89,7 +94,11 @@
   "eventName": "eventName",
 
   "시 / 도": "시 / 도",
+  "市 / 道": "시 / 도",
+  "City / Province": "시 / 도",
   "구 / 군": "구 / 군",
+  "区 / 洞": "구 / 군",
+  "Distict / Country": "구 / 군",
   "ex. 서울시 마포구": "ex. 서울시 마포구",
   "서울특별시": "서울특별시",
   "ソウル特別市": "서울특별시",
